--- a/web/django_project/inventory/templates/inventory/product_form.html
+++ b/web/django_project/inventory/templates/inventory/product_form.html
@@ -31,7 +31,7 @@
                     <div class="mb-3">
                         <label for="{{ form.name.id_for_label }}" class="form-label">Product Name:</label>
                         <input type="text" name="{{ form.name.name }}" id="{{ form.name.id_for_label }}"
-                            class="form-control" placeholder="e.g., Premium Widget"
+                            class="form-control" placeholder="Product Name"
                             value="{{ form.name.value|default_if_none:'' }}" required>
                     </div>
 
